--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-svgr": "^4.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -64,6 +63,8 @@
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-svgr": "^4.1.0",
+    "vite-plugin-vercel": "^2.0.0",
     "vite-plugin-compression2": "^0.11.0"
   }
 }
