--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "accounting": "^0.4.1",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -63,8 +64,8 @@
     "prettier": "^3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-compression2": "^0.11.0",
     "vite-plugin-svgr": "^4.1.0",
-    "vite-plugin-vercel": "^2.0.0",
-    "vite-plugin-compression2": "^0.11.0"
+    "vite-plugin-vercel": "^2.0.0"
   }
 }
